--- a/src/client/styles/app.css
+++ b/src/client/styles/app.css
@@ -6,3 +6,9 @@ body {
   text-align: center;
   margin: auto;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
